# tanks_shooter

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt  main.cpp
src/shooter/: CMakeLists.txt  game.cpp  game.h  prec.h
src/shooter/actions/: action.h  action_data.h  registrator.h
src/shooter/game_map/: map.h  parser.cpp  parser.h
src/shooter/game_objects/: battleground.cpp  battleground.h  bullet.cpp  bullet.h  object.h  tank.cpp  tank.h  tank_controller.cpp  tank_controller.h  updatable.h  wall.cpp  wall.h
src/shooter/menu/: item.h  item_pointer.cpp  item_pointer.h  main.cpp  main.h  splash_screen.cpp  splash_screen.h
